Added new service for generating Report, Refactored readFromFilesContents method in ReaderServiceImpl and improved code readability in ParseServiceImpl, added constants for numbers